graphql -  minor c